fix width on mobile to include padding

--- a/src/components/Contact/AskAbout/AskAbout.module.css
+++ b/src/components/Contact/AskAbout/AskAbout.module.css
@@ -24,6 +24,7 @@
   color: var(--primary-white);
   display: flex;
   flex-direction: column;
+  align-items: start;
   gap: 2rem;
 }
 
@@ -43,7 +44,17 @@
 }
 
 @media (min-width: 960px) {
+  .container{
+    align-items: start;
+    justify-content: end;
+    gap: 2rem;
+  }
+
   .headings {
     align-items: start;
+  }
+  .container ul{
+    gap: 0.5rem;
+    width: 40vw;
   }
 }
