--- a/src/components/pages/ContactUs/ContactUs.module.css
+++ b/src/components/pages/ContactUs/ContactUs.module.css
@@ -1,13 +1,16 @@
+*{
+  box-sizing: border-box;
+}
+
 .ContactPage {
   background-color: var(--midnight-green);
-  height: 100%;
-  width: calc(100vw-3rem);
-  box-sizing: border-box;
+  height:100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 1.875rem;
-  padding: 5rem 1.5rem 6rem;
+  padding: 5rem 1.5rem 6rem 1.5rem;
 
   /* illustrations */
   background-image: url("../../../assets/bg-pattern-contact-2.svg");
@@ -19,14 +22,16 @@
   .ContactPage {
     gap: 4rem;
     padding: 7rem 8rem;
-
     background-image: url("../../../assets/bg-pattern-about-2-contact-1.svg"),url("../../../assets/bg-pattern-contact-2.svg");
-    background-position: top 7rem left -20%, bottom  right -15%;
+    background-position: top 7rem left -20%, bottom  right -7rem;
   }
 }
 
 @media (min-width: 960px) {
   .ContactPage {
-    padding: 7.5rem;
+    flex-direction: row;
+    align-items: flex-end;
+    gap: 1.875rem;
+    padding: 7.5rem 10.25rem;
   }
 }
